apps/tpi-1/paperless-ngx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx
  namespace: default
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "paperless.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: paperless-ngx
      port: 8000
